Correcting Makefiles to use explicit .cpp files rather than forbidden wildcards

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -6,38 +6,36 @@
 #    By: jcummins <jcummins@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/10/26 18:08:59 by jcummins          #+#    #+#              #
-#    Updated: 2024/10/21 15:43:04 by jcummins         ###   ########.fr        #
+#    Updated: 2024/11/19 18:48:33 by jcummins         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = forms
 
-SRC_DIR = .
-OBJ_DIR = obj
-CC = c++
-CFLAGS = -g -Werror -Wextra -Wall -pedantic -std=c++98 -lstdc++
+CXX = c++
+CXXFLAGS = -g -Werror -Wextra -Wall -pedantic -std=c++98
 
-SRCS = $(shell find $(SRC_DIR) -name '*.cpp')
-OBJS = $(SRCS:$(SRC_DIR)/%.c=$(OBJ_DIR)/%.o)
+SRCS = main.cpp Form.cpp Bureaucrat.cpp
+OBJS = $(SRCS:%.cpp=%.o)
+HEADS = Bureaucrat.hpp Form.hpp
 
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	@$(CC) $(CFLAGS) $^ -o $@
+	@$(CXX) $(CXXFLAGS) $^ -o $@
 	@echo "✅ Linking object files into executable $@"
 
-$(OBJ_DIR)/%.o:	$(SRC_DIR)/%.c
-	@mkdir -p $(@D)
-	@$(CC) $(CFLAGS) -c $< -o $@
+%.o: %.cpp
+	@$(CXX) $(CXXFLAGS) -c $< -o $@
 	@echo "✅ Complied object file $@ from source file $<"
 
 clean:
 	@echo "💥 Removing all object files"
-	@rm -rf $(OBJ_DIR)
+	@rm -f $(OBJS)
 
 fclean: clean
 	@echo "💥 Removing all object files and executable"
-	@rm -rf $(NAME)
+	@rm -f $(NAME)
 
 re:	fclean all
 
