--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -6,39 +6,38 @@
 #    By: jcummins <jcummins@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/10/26 18:08:59 by jcummins          #+#    #+#              #
-#    Updated: 2024/10/22 15:24:24 by jcummins         ###   ########.fr        #
+#    Updated: 2024/11/19 19:01:56 by jcummins         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = more_forms
 
-SRC_DIR = .
-OBJ_DIR = obj
-CC = c++
-CFLAGS = -g -Werror -Wextra -Wall -pedantic -std=c++98 -lstdc++
+CXX = c++
+CXXFLAGS = -g -Werror -Wextra -Wall -pedantic -std=c++98
 
-SRCS = $(shell find $(SRC_DIR) -name '*.cpp')
-OBJS = $(SRCS:$(SRC_DIR)/%.c=$(OBJ_DIR)/%.o)
+SRCS = AForm.cpp Bureaucrat.cpp main.cpp PresidentialPardonForm.cpp RobotomyRequestForm.cpp ShrubberyCreationForm.cpp
+OBJS = $(SRCS:%.cpp=%.o)
+HEADS = AForm.hpp Bureaucrat.hpp PresidentialPardonForm.hpp RobotomyRequestForm.hpp ShrubberyCreationForm.hpp
 
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	@$(CC) $(CFLAGS) $^ -o $@
+	@$(CXX) $(CXXFLAGS) $^ -o $@
 	@echo "✅ Linking object files into executable $@"
 
-$(OBJ_DIR)/%.o:	$(SRC_DIR)/%.c
-	@mkdir -p $(@D)
-	@$(CC) $(CFLAGS) -c $< -o $@
+%.o: %.cpp $(HEADS)
+	@$(CXX) $(CXXFLAGS) -c $< -o $@
 	@echo "✅ Complied object file $@ from source file $<"
 
 clean:
 	@echo "💥 Removing all object files"
-	@rm -rf $(OBJ_DIR)
+	@rm -f $(OBJS)
 
 fclean: clean
 	@echo "💥 Removing all object files and executable"
-	@rm -rf $(NAME)
+	@rm -f $(NAME)
 
 re:	fclean all
 
 .PHONY: all clean fclean re
+
